# EA_CFB_Dynasty_Tracker

./: .gitignore  LINT_ANALYSIS_REPORT.md  README.md  app.py  cfb_dynasty_tracker.postman_collection.json  extensions.py  fix_playoff_rounds.py  migrate_player_fields.py  migrate_recruit_transfer_rank_pos.py  migrate_recruits.py  migrate_transfers.py  models.py  package.json  populate_db.py  populate_db_with_testing_data.py  pyproject.toml  remove_old_columns.py  requirements.txt  schemas.py  test_migration.py  utils.py  utils_teamseason_stats.py
frontend/: DESIGN_SYSTEM.md  package.json  pnpm-lock.yaml  tailwind.config.ts  types.ts
frontend/app/: ClientLayout.tsx  globals.css  layout.tsx  page.tsx
frontend/app/awards/: page.tsx
frontend/app/games/: Bracket.tsx  page.tsx
frontend/app/players/: page.tsx
frontend/app/rankings/: page.tsx
frontend/app/recruiting/: page.tsx
frontend/app/seasons/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: AddPlayerModal.tsx  AddRecruitModal.tsx  AddTransferModal.tsx  PlayerRatingChart.tsx  RecruitCard.tsx  SeasonSelector.tsx  TransferCard.tsx  WinsChart.tsx  navigation.tsx  sortable-team-row.tsx  theme-toggle.tsx
frontend/context/: SeasonContext.tsx
frontend/lib/: api.ts
frontend/styles/: globals.css
instance/: dynasty.db
migrations/: add_weeks.py
routes/: __init__.py  awards.py  career.py  conferences.py  dashboard.py  draft.py  games.py  honors.py  players.py  playoff.py  promotion.py  rankings.py  recruiting.py  season_actions.py  seasons.py  teams.py  transfer.py
(+31 files in other folders)
