[project]
name = "ea-cfb-dynasty-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "flask-sqlalchemy>=3.1.1",
    "marshmallow>=4.0.0",
    "requests>=2.32.4",
    "selenium>=4.34.0",
    "webdriver-manager>=4.0.2",
]
